--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "mochawesome-report-generator": "4.1.0",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
