--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/betrybe/sd-0x-project-shopping-cart#readme",
   "dependencies": {
+    "@types/jest": "^28.1.0",
     "cypress": "4.3.0",
     "cypress-multi-reporters": "1.2.4",
     "eslint-config-trybe-fundamentals": "1.1.0",
@@ -43,6 +44,7 @@
     "mochawesome": "5.0.0",
     "mochawesome-merge": "4.0.3",
     "mochawesome-report-generator": "4.1.0",
+    "node-fetch": "^2.6.1",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0"
   }
