--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Você já usa o GitHub diariamente para desenvolver os exercícios, certo? Agora, para desenvolver os projetos, você deverá seguir as instruções a seguir. Fique atento a cada passo, e se tiver qualquer dúvida, nos envie por _Slack_! #vqv 🚀",
   "main": "script.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
@@ -45,5 +45,8 @@
     "mochawesome-report-generator": "4.1.0",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.0"
   }
 }
