--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "cypress": "4.3.0",
     "cypress-multi-reporters": "1.2.4",
     "eslint-config-trybe-fundamentals": "1.1.0",
-    "jest": "24.9.0",
     "mocha": "7.1.1",
     "mochawesome": "5.0.0",
     "mochawesome-merge": "4.0.3",
     "mochawesome-report-generator": "4.1.0",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.1",
+    "jest": "^28.1.0",
+    "node-fetch": "^3.2.5"
   }
 }
