Requisito 1 e 2: completos :tada: :tada: :tada:

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Você já usa o GitHub diariamente para desenvolver os exercícios, certo? Agora, para desenvolver os projetos, você deverá seguir as instruções a seguir. Fique atento a cada passo, e se tiver qualquer dúvida, nos envie por _Slack_! #vqv 🚀",
   "main": "script.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/betrybe/sd-0x-project-shopping-cart#readme",
   "dependencies": {
+    "@types/jest": "^28.1.1",
     "cypress": "4.3.0",
     "cypress-multi-reporters": "1.2.4",
     "eslint-config-trybe-fundamentals": "1.1.0",
