--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
   "devDependencies": {
     "@types/jest": "^28.1.1",
     "jest": "^28.1.0",
-    "node-fetch": "^3.2.5"
+    "jest-environment-jsdom": "^28.1.1"
   }
 }
